fix broken html elements. wrap page contents in container div

--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -2,24 +2,11 @@
 #main .chat {
   .chatbox {
     @include font-scale;
-    display: flex;
-    flex-direction: column;
+    color: aqua;
     margin: 4rem 0;
     padding: 0.1em 1em;
     border-radius: $radius;
-    color: aqua;
-    background-color: rgb(90, 111, 119);
     min-height: 30rem;
     max-width: 40rem;
-
-    li:after {
-      content: "\A";
-      float: left;
-      white-space: pre;
-    }
-
-    .right {
-      text-align: right;
-    }
   }
 }
